# graft

./: .gitignore  AGENTS.md  Cargo.toml  PLANS.md  README.md  SUPPORTED_LANGUAGES.md  default.nix  flake.nix  gen_supported_languages.sh
.github/workflows/: ci.yml
.skills/graft/: SKILL.md
docs/: _config.yml  index.md  installation.md  languages.md  rules.md  usage.md
examples/: batch_query_test.sh  batch_test.sh  rule_file_test.sh  rules.toml  stdin_test.sh
examples/go/: after.go  run.sh  target.go
examples/javascript/: after.js  run.sh  target.js
examples/rust/: after.rs  before.rs  run.sh
src/: languages.rs  lib.rs  main.rs  rules.rs
src/cli/: mod.rs
src/graft/: mod.rs  transformer.rs
src/graft/transformer/: mod.rs  tests.rs
tests/: integration_tests.rs
