[package]
name = "graft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
regex = "1.12.3"
streaming-iterator = "0.1.9"
tree-sitter = "0.26.5"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-rust = "0.24.0"
