[package]
name = "graft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
glob = "0.3.3"
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
streaming-iterator = "0.1.9"
tree-sitter = "0.26.5"
tree-sitter-bash = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.23"
tree-sitter-dockerfile = "0.2.0"
tree-sitter-go = "0.23.0"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.23"
tree-sitter-lua = "0.4.1"
tree-sitter-make = "1.1.1"
tree-sitter-markdown = "0.7.1"
tree-sitter-nix = "0.3.0"
tree-sitter-ocaml = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23.2"
tree-sitter-toml = "0.20.0"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7.2"
